--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <input type="text" name="q" placeholder="Search product by name or SKU" value="{{ q or '' }}">
     <button class="btn">Search</button>
     <a class="btn ghost" href="{{ url_for('products') }}">Products</a>
+    <a class="btn ghost" href="{{ url_for('finance') }}">Finance</a>
   </form>
 </header>
 <div class="container">
